src/test/ui/feature-gate/issue-43106-gating-of-rustc_deprecated.stderr
error[E0601]: main function not found

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:17:1
   |
17 | #![rustc_deprecated           = "1500"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:20:1
   |
20 | #[rustc_deprecated = "1500"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:23:17
   |
23 |     mod inner { #![rustc_deprecated="1500"] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:26:5
   |
26 |     #[rustc_deprecated = "1500"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:29:5
   |
29 |     #[rustc_deprecated = "1500"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:32:5
   |
32 |     #[rustc_deprecated = "1500"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:35:5
   |
35 |     #[rustc_deprecated = "1500"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

